feat: Keep user and project info in CEEMS DB
* Add new endpoints that serve user and project details

* Fetch list of projects from projects table in queries

* Simplifiy validation function using query builder

* Update unit tests
